Enchiridion - 3.1.3
• Readd CraftTweaker support
• Fix JEI Integration

Enchiridion - 3.1.2
• Updated to Minecraft 1.9.4

Enchiridion - 3.1.1
• Added execute command action for buttons

Enchiridion - 3.1.0
• Added the ability to save and load templates, as well as setting them as default or not.
• Added Preview windows and the option to make pages scrollable (which looks stupid normally), However these are intended to be used in the preview windows. So you can have a scrollable section within the books.
• Because of the above, the arrows are now a template that are defaulted to defaultly be added :P
• Added toggle visibility of layers action to buttons
• You can now resize the hover/unhover text with buttons like they were text
• Selecting a layer will now act as if you had selected the layer directly (You can't select locked layers) (allowing the use of ctrl click on layers etc)
• Fix button copying, not copying the text label fields
• Fix item and recipe copying not copying the tooltip field
• Updated the enchiridion book
• Added Ctrl + X support to copying features aka cut.
• Instead of shift clicking buttons in edit mode, you now simply right or middle click them (Less chance of conflict with shift resizing)

Enchiridon - 3.0.1
• Added a recipe for the library (With config to disable)
  • Default recipe is like a bookshelf but using dark wood on the tops, and any books that are supported by the library in the centre
  • The books aren't consumed in the recipe, because why lose your information!
• Changed the hotkey to be disabled by default (Fixed localisation)
• Library now functions slightly differently
  • First right click of empty library will open the library
  • Books when right clicked will be marked as last clicked book
  • The Enchiridion library will appear as if it is that book
  • Further right clicks will open this mods book
  • Hold shift when right clicking a library to open it's gui
• Added some things to allow for Progression Integration