@@ -1,6 +1,7 @@
 Enchiridion - 3.1.3
 • Readd CraftTweaker support
 • Fix JEI Integration
+• Fix Library Recipe accidentally consuming books
 
 Enchiridion - 3.1.2
 • Updated to Minecraft 1.9.4
